<resources>
    <string name="app_name">Law Plus</string>
    <string-array name="question_area">
        <item>Youth Issues</item>
        <item>Women</item>
        <item>Motor Traffic</item>
    </string-array>

    <string-array name="contact_option">
        <item>Contact Lawyer</item>
        <item>Contact Voulenteer</item>
    </string-array>
    <string name="bodytext">
        --> Type text here
    </string>

    <string name="delButton">Delete Question</string>
    <string name="tvRequestClientDetails">Request Client Details</string>
    <string name="btnrequestclientdetails">Request Client Details</string>
    <string name="addFeedback">Add Feedback</string>
    <string name="feedback">Type your idea here.... </string>
    <string name="btnContact">Contact QA</string>
    <string name="btnSupportservice">Support Services</string>
    <string name="btnDev">Contact DEV</string>
    <string name="feedbackUserMail">akshat.a@gmail.com</string>
    <string name="feedbackUserName">Akshat A.</string>
    <string name="title_activity_user_feedbacks">UserFeedbacks</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="userfeedback">User Feedback</string>
    <string name="title_activity_feedback_sucess">FeedbackSucess</string>
    <string name="rateUs">Rate Us</string>

    <string-array name="title_story">
        <item>Never Sign Anything Without Getting a Copy or Taking a Picture </item>
        <item>Don’t Admit Liability Until You Talk to an Attorney </item>
        <item>Get Agreements in Writing </item>
        <item>Protect Your Family and Business from Legal Risk</item>
        <item> You Have Rights as a Landlord and a Tenant</item>

    </string-array>
    <string-array name="details_story">
        <item>if every client had
            a copy of the agreement that they signed.\n\n "When they do, we are able to clearly point out to the other party what they are obligated to do under the contract and they are much more willing to step up and do it\n\n.</item>
        <item>Don’t Admit Liability Until You Talk to an Attorney \n\n “If you have good thoughts. They will shine out of your face like sunbeams and you will always look lovely.” –Roald Dahl\n\nIt’s amazing what good thoughts can do to a person. When you think positively, that energy expands from within you.This glow makes you look beautiful, inspires others, and makes you a pleasant person to be around. Your thoughts spread energy; choose happy energy.</item>
        <item>Get Agreements in Writing \n\n “Never give up on what you really want to do.The person with big dreams is more powerful than one with all the facts. ” –Albert Einstein\n\nIt was a “fact” once that man would never fly in the sky. The Wright brothers had big dreams that went beyond fact in their day and age.If you stay true to what you really want to do, then you will find ways to make it happen. Big dreams work on big magic.</item>
        <item>Protect Your Family and Business from Legal Risk</item>
        <item> You Have Rights as a Landlord and a Tenant</item>
    </string-array>

</resources>
